--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,35 @@
-.App {
-  text-align: center;
+.note-text {
+
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.note-text > div {
+    min-height: 100px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.note-text > textarea {
+    border: 0;
+    min-height: 100px;
+    resize: none;
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    line-height: 1.5;
 }
 
-.App-intro {
-  font-size: large;
+.note-title {
+
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.note-title > div {
+    
+}
+
+.note-title > input {
+    border: 0;
+    font-size: 1.75rem;
+    line-height: 1.1;
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    background-color: transparent;
+}
+
+.note-title > h3 {
+    min-height: 30px;
 }
